--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
+    "eslint": "^5.16.0",
+    "jest": "^24.7.1",
+    "node-sass": "^4.12.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-json-view": "1.19.1",
@@ -20,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src/*.js"
   },
   "browserslist": [
     ">0.2%",
