--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
     "eslint": "^5.16.0",
     "jest": "^24.7.1",
     "node-sass": "^4.12.0",
@@ -17,6 +15,9 @@
     "superagent": "5.1.0"
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "react-styleguidist": "^9.1.11",
     "typescript": "3.3.3"
   },
   "scripts": {
@@ -24,7 +25,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/*.js"
+    "lint": "eslint ./src/*.js",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "browserslist": [
     ">0.2%",
